# fastapi-smartpath

./: .gitignore  README.md  initial_data.py  main.py  pyproject.toml  smartpath.db
app/: main.py
app/api/: deps.py
app/api/v1/: assessment.py  auth.py  chat.py  roadmap.py  roadmap_v2.py
app/core/: config.py  ratelimit.py  security.py
app/db/: base.py  mock_db.py  session.py
app/models/: chat.py  roadmap.py  user.py
app/routers/: auth.py  navigation.py
app/schemas/: quiz.py  roadmap.py  roadmap_v2.py  user.py
app/services/: ai_generator.py  ai_roadmap.py  ai_roadmap_v2.py  email.py
frontend/: generate.html  index.html  landing.html  login.html  profile.html  roadmap.html  script.js  style.css
templates/: assessment.html  dashboard.html  index.html  login.html  market.html  onboarding.html  roadmap.html  upgrade.html
